# django-calaccess-processed-data

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  Makefile  Pipfile  README.rst  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: continuous-deployment.yaml  etl.yaml  test.yaml
2016-08-20_11-22-18/: candidate.csv
calaccess_processed/: __init__.py  admin.py  apps.py  candidate_party_corrections.py  decorators.py  fields.py  managers.py  merge_funcs.py  models.py  postgres.py  proxies.py  special_elections.py  tests.py
calaccess_processed/admin/: __init__.py  campaign.py  common.py  scraped.py  tracking.py
calaccess_processed/corrections/: __init__.py  candidate_party.csv  candidate_party.py
calaccess_processed/fixtures/: candidate_scraped_elections.json  divisions.json  form460filing.json  form460filingversion.json  incumbent_scraped_elections.json  proposition_scraped_elections.json  scraped_candidates.json  scraped_incumbents.json  scraped_propositions.json
calaccess_processed/managers/: __init__.py  bulkloadsql.py  calaccess_raw.py  calaccess_scraped.py  constraints.py  filings.py
calaccess_processed/migrations/: 0001_initial.py  0001_squashed_0013_auto_20171114_1957.py  0002_auto_20161123_2208.py  (+113 more)
calaccess_processed_campaignfinance/: __init__.py  apps.py
calaccess_processed_elections/: __init__.py  apps.py  merge.py  models.py  special_elections.py
calaccess_processed_filings/: __init__.py  apps.py  managers.py
calaccess_processed_flatfiles/: __init__.py  apps.py  models.py
docs/: conf.py  index.rst
(+920 files in other folders)
