[bdist_wheel]
universal = 1

[flake8]
max-line-length = 999
exclude =
 calaccess_processed/migrations/*
 calaccess_processed_elections/migrations/*
 calaccess_processed_filings/migrations/*
 calaccess_processed_flatfiles/migrations/*
ignore = D105,D200,D204,D401,W503

[metadata]
license-file = LICENSE
